--- a/src/main/webapp/seller/apply/contractBuyerInfo.xhtml
+++ b/src/main/webapp/seller/apply/contractBuyerInfo.xhtml
@@ -82,7 +82,7 @@
 
                 <hr/>
 
-                <b:commandButton action="#{contractCreate.toBuyerInfo}" look="success" value="下一步">
+                <b:commandButton action="#{contractCreate.createContract}" look="success" value="下一步">
                     <f:param name="cid" value="#{javax.enterprise.context.conversation.id}" />
                 </b:commandButton>
 
